# lane

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  README.md  SECURITY.md  install.sh
.claude/agents/: continuity-steward.md  intent-analyst.md  rust-implementer.md  rust-native-guardian.md  solution-architect.md  verification-engineer.md
.claude/skills/intent-driven-development/: SKILL.md
.claude/skills/intent-to-spec/: SKILL.md
.claude/skills/lane-feature-design/: SKILL.md
.claude/skills/lane-loop/: SKILL.md
.claude/skills/lane-loop/references/: loop-templates.md
.claude/skills/lane-loop/scripts/: ralph-lane.sh
.claude/skills/lane-session-resume/: SKILL.md
.claude/skills/lane-verification/: SKILL.md
.claude/skills/rust-native-guard/: SKILL.md
.claude/skills/rust-native-implementation/: SKILL.md
.claude/skills/session-relay/: SKILL.md
.github/workflows/: ci.yml  release.yml
.handoff/context/: capsule.json
.lane-loop/: README.md  template-backlog-item.md
.lane-loop/hooks/: lane-events.toml
.lane-loop/policies/: rules.toml
.lane-loop/schemas/: packet.schema.json  session.schema.json  task.schema.json
.workflows/: fanout_write.mjs  port_layer.mjs  reference_playbooks.mjs
_workspace/: .gitignore  AUDIT-KICKOFF.md  HANDOFF.md  KICKOFF.md  backlog.md  harness-upgrade-progress.md  loop_state.md  phase-a1-obscura.md
assets/: server_down.html  upstream_down.html
docs/: VISION.md  commands.md  comparison-with-slim.md  configuration.md  getting-started.md  index.html  relay-validation.md  troubleshooting.md
docs/adopt/: host-nm-snapshot-2026-06-17.md
docs/adr/: ADR-0001-lane-obscura-network-seam.md  ADR-0002-cross-machine-lane-relay.md  ADR-0003-host-network-adopt-consume.md
docs/reference/: README.md  repositories.md  wf-fanout-write.mjs  wf-port-layer.mjs  wf-reference-playbooks.mjs
src/: acme.rs  inspect.rs  lib.rs  main.rs  service.rs  webpolicy.rs
src/auth/: mod.rs
src/cert/: mod.rs  trust.rs
src/cli/: cert.rs  completions.rs  config.rs  doctor.rs  domain.rs  down.rs  inspect.rs  install.rs  list.rs  login.rs  logout.rs  logs.rs  mod.rs  net.rs  portfwd.rs  relay.rs  restart.rs  share.rs  start.rs  stop.rs  uninstall.rs  up.rs  upgrade.rs  version.rs  web.rs
src/config/: mod.rs  paths.rs  settings.rs
src/daemon/: mod.rs  protocol.rs  socket.rs
src/doctor/: mod.rs
src/httperr/: mod.rs  network.rs
src/log/: mod.rs
src/net/: adopt.rs  apply.rs  mod.rs  model.rs  networkd.rs  profile.rs
src/osutil/: mod.rs
src/project/: mod.rs
src/protocol/: mod.rs
src/proxy/: handler.rs  health.rs  mod.rs  pages.rs  server.rs
src/relay/: allowlist.rs  identity.rs  live.rs  mod.rs
src/setup/: mod.rs
src/system/: elevated.rs  hostfile.rs  mod.rs  portfwd.rs
src/term/: mod.rs  step.rs  table.rs
src/tunnel/: client.rs  dialer.rs  forward.rs  hops.rs  mod.rs  pages.rs  subdomain.rs
src/web/: mod.rs  proxy.rs
