# lane is an independent crate/repo (see meta-repo rules); declaring an empty
# workspace table keeps it self-contained when checked out inside another
# Cargo workspace (e.g. a worktree nested under the meta workspace root).
[workspace]

[package]
name = "lane"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Clean HTTPS local domains for your dev servers — myapp.test → localhost:3000"
license = "PolyForm-Shield-1.0.0"
repository = "https://github.com/drdave-flexnetos/lane"
homepage = "https://github.com/drdave-flexnetos/lane"
readme = "README.md"
keywords = ["proxy", "https", "localhost", "dns", "tunnel"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
default-run = "lane"

[lib]
name = "lane"
path = "src/lib.rs"

[[bin]]
name = "lane"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP / proxy
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
httparse = "1"

# TLS + certificates
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
webpki-roots = "0.26"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring", "x509-parser"] }
rsa = { version = "0.9", features = ["sha2"] }
x509-parser = "0.16"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client + websocket tunnel
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "charset", "http2"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

# Terminal UI
owo-colors = "4"
indicatif = "0.17"
comfy-table = "7"

# System / utility
regex = "1"
fs2 = "0.4"
libc = "0.2"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
open = "5"
humantime = "2"
anyhow = "1"
thiserror = "1"

# upgrade: archive handling
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
