[package]
name = "lane"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "Clean HTTPS local domains for your dev servers — myapp.test → localhost:3000"
license = "PolyForm-Shield-1.0.0"
repository = "https://github.com/FlexNetOS/lane"
homepage = "https://github.com/FlexNetOS/lane"
readme = "README.md"
keywords = ["proxy", "https", "localhost", "dns", "tunnel"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
default-run = "lane"

# lane is an independent repo (see the meta-repo rules). Declaring an empty workspace
# table makes it a standalone Cargo workspace root, so the checkout — and any git
# worktree placed under the parent meta tree — is not absorbed into a parent workspace.
[workspace]

[lib]
name = "lane"
path = "src/lib.rs"

[[bin]]
name = "lane"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP / proxy
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
httparse = "1"

# ACME / Let's Encrypt (feature-gated live issuance). instant-acme's default
# features are hyper-rustls + ring (NOT aws-lc-rs), preserving lane's
# one-rustls-ring invariant.
instant-acme = { version = "0.7", optional = true }

# TLS + certificates
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
webpki-roots = "0.26"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring", "x509-parser"] }
rsa = { version = "0.9", features = ["sha2"] }
x509-parser = "0.16"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client + websocket tunnel
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "charset", "http2"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

# Terminal UI
owo-colors = "4"
indicatif = "0.17"
comfy-table = "7"
# crossterm (already in the tree via comfy-table) powers the `lane inspect` TUI:
# alternate screen, raw mode, and key events.
crossterm = "0.29"

# System / utility
regex = "1"
fs2 = "0.4"
libc = "0.2"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
open = "5"
humantime = "2"
anyhow = "1"
thiserror = "1"

# upgrade: archive handling
flate2 = "1"
tar = "0.4"
iroh = { version = "0.98.2", default-features = false, optional = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = []
acme = ["dep:instant-acme"]
# Governed-egress `lane web` seam (ADR-0001 Option B). obscura is spawned as an
# EXTERNAL CHILD PROCESS, not linked as a crate, so the feature gates only the
# live-spawn code path and pulls in NO new dependency. The default build compiles
# none of the live spawn; the pure policy/gate/spawn-plan layer is always built.
obscura = []
# Cross-machine relay (ADR-0002). iroh (QUIC p2p + NAT traversal + relay fallback)
# is OPTIONAL and feature-gated: the default build pulls in none of it. This
# feature is why the crate rust-version is 1.89 (modern iroh's MSRV); the default
# (no-relay) build still compiles on the pinned stable toolchain. iroh is pulled
# in with `default-features = false`; the relay feature re-enables only the one
# piece the relay needs: `tls-ring` (the rustls crypto provider the
# `presets::Minimal` endpoint builder requires — matches lane's process-wide ring
# provider). Hermetic two-endpoint tests use RelayMode::Disabled + direct
# addressing, so no relay-server (`test-utils`) dependency is needed.
relay = ["dep:iroh", "iroh/tls-ring"]
